grammar.js
  word: $ => $._word,

  rules: {
    program: $ => optional($._statements),

    _statements: $ => prec(1, seq(
      repeat($._terminator), // Allow leading terminators/newlines
      repeat(seq(
        $._statement_or_comment,
        optional($.comment),
        $._terminator,
      )),
      $._statement_or_comment,
      optional($.comment),
      optional($._terminator),
    )),

    // Zsh glob qualifiers: (.) (/) (*) etc.
    // FIXME: these qualifiers need extending to deal with
    //
    _terminated_statement: $ => repeat1(seq(
      $._statement,
      $._terminator,
    )),
    
    _statement: $ => choice(
      $._statement_not_subshell,
      $.subshell,
    ),

    _statement_not_pipeline: $ => prec(1, choice(
      $.redirected_statement,
      $.variable_assignment,
      $.variable_assignments,
      $.command,
      $.declaration_command,
      $.unset_command,
      $.test_command,
      $.negated_command,
      $.for_statement,
      $.terse_for_statement,
      $.c_style_for_statement,
      $.while_statement,
      $.repeat_statement,
      $.select_statement,
      $.if_statement,
      $.case_statement,
      $.list,
      $.compound_statement,
      $.function_definition,
      $.subshell,
    )),

    for_statement: $ => seq(
      'for',
      field('variable', $._simple_variable_name),
      optional(seq(
        'in',
        field('value', repeat1($._literal)),
      )),
      $._terminator,
      field('body', $.do_group),
    ),
    
    terse_for_statement: $ => prec(2, seq(
      'for',
      field('variable', $._simple_variable_name),
      '(',
      field('value', repeat1($._literal)),  // Allow multiple values
      ')',
      field('body', choice(
        $._statement,                      // Allow single statement (no do/done)
        seq($._terminator, $.do_group),    // Or traditional do/done
      )),
    )),

    while_statement: $ => seq(
      choice('while', 'until'),
      field('condition', $._terminated_statement),
      field('body', $.do_group),
    ),

    select_statement: $ => seq(
      'select',
      field('variable', $.variable_name),
      optional(seq(
        'in',
        repeat1($._literal),
      )),
      $._terminator,
      field('body', $.do_group),
    ),

    do_group: $ => seq(
      'do',
      optional($._terminated_statement),
      'done',
    ),

    if_statement: $ => seq(
      'if',
      field('condition', $._terminated_statement),
      'then',
      optional($._terminated_statement),
      repeat($.elif_clause),
      optional($.else_clause),
      'fi',
    ),

    elif_clause: $ => seq(
      'elif',
      $._terminated_statement,
      'then',
      optional($._terminated_statement),
    ),

    else_clause: $ => seq(
      'else',
      optional($._terminated_statement),
    ),

    case_statement: $ => seq(
      'case',
      field('value', $._literal),
      optional($._terminator),
      optional($.comment),
      'in',
      optional($._terminator),
      optional(seq(
        repeat($.case_item),
        alias($.last_case_item, $.case_item),
      )),
      'esac',
    ),

    case_item: $ => seq(
      choice(
        seq(
          optional('('),
          field('value', choice($._literal, $._extglob_blob)),
          repeat(seq('|', field('value', choice($._literal, $._extglob_blob)))),
          ')',
        ),
      ),
      optional($._statements),
      prec(1, choice(
        field('termination', ';;'),
        field('fallthrough', choice(';&', ';;&')),
      )),
    ),

    pipeline: $ => prec.right(seq(
      $._statement_not_pipeline,
      repeat1(seq(
        choice('|', '|&'),
        $._statement_not_pipeline,
      )),
    )),

    negated_command: $ => seq(
      '!',
      choice(
        prec(2, $.command),
        prec(1, $.variable_assignment),
        $.test_command,
        $.subshell,
      ),
    ),

    test_command: $ => prec(2, seq(
      choice(
        seq(
          '[', 
          optional(choice($._expression, $.redirected_statement)), 
          ']'
        ),
        seq(
          '[[',
          choice(
            prec(1, alias($._test_command_binary_expression, $.binary_expression)),
            $._expression,
          ),
          ']]',
        ),
        seq(
          '((', 
          optional($._expression), 
          '))'
        ),
      )),
    ),
    
    _test_command_binary_expression: $ => prec(PREC.COMPARE,
      choice(
        // Regex matching operator
        prec(PREC.COMPARE, seq(
          field('left', $._expression),
          field('operator', '=~'),
          field('right', $._regex_match_expression), // Use dedicated regex expression
        )),
        // Pattern/string matching operators  
        prec(PREC.COMPARE - 1, seq(
          field('left', $._expression),
          field('operator', choice('=', '==', '!=', $.test_operator)),
          field('right', $._expression),
        )),
      ),
    ),

    command: $ => prec.left(seq(
      prec(4, repeat(choice(
        $.variable_assignment,
        field('redirect', $._redirect),
      ))),
      field('name', $.command_name),
      choice(
        prec(4, repeat(
          choice(
            field('argument', $._literal),
//            prec(-1, field('argument', $._bare_dollar)),
            field('argument', $.glob_pattern),
            field('argument', seq(
              choice('=~', '=='),
              choice($._literal, $.regex),
            ),
            field('redirect', $.herestring_redirect),
          )
        ))),
        $.subshell,
      ),
    )),

    command_name: $ => $._literal,

    subscript: $ => prec.left(seq(
      field('name', $.variable_name),
      '[',
      optional(field('flags', $.zsh_array_subscript_flags)),
      field('index', choice($._param_arithmetic_expression, $.array_star, $.array_at, $.string)),
      ']',
    )),

    // Arithmetic expressions for parameter subscripts (avoids subscript recursion)
    _param_arithmetic_expression: $ => prec(1, choice(
      $._param_arithmetic_literal,
      alias($._param_arithmetic_unary_expression, $.unary_expression),
      alias($._param_arithmetic_ternary_expression, $.ternary_expression),
      alias($._param_arithmetic_binary_expression, $.binary_expression),
      alias($._param_arithmetic_postfix_expression, $.postfix_expression),
      alias($._param_arithmetic_parenthesized_expression, $.parenthesized_expression),
      $.command_substitution,
    )),

    array_star: $ => $._array_star_token,
    array_at: $ => $._array_at_token,

    // Zsh array subscript flags: (i) (I) (r) (R) etc.
    // FIXME: delimeter is forced as :, could be any
    _redirect: $ => choice($.file_redirect, $.herestring_redirect),

    // Expressions

    _expression: $ => choice(
      $._literal,
      $.unary_expression,
      $.ternary_expression,
      $.binary_expression,
      $.postfix_expression,
      $.parenthesized_expression,
    ),

    // https://tldp.org/LDP/abs/html/opprecedence.html
    binary_expression: $ => createBinaryExpression(
      [...OPERATOR_TABLES.FULL, [$.test_operator, PREC.TEST]], // Add test_operator to full table
      $._expression,
      $._expression,
      {
        specialCases: [
          // Regex matching with new regex expression type
          prec(PREC.ASSIGN, seq(
            field('left', $._expression),
            field('operator', '=~'),
            field('right', $._regex_match_expression), // NEW: dedicated regex expression
          )),
          // Glob pattern matching (unchanged)
          prec(PREC.EQUALITY, seq(
            field('left', $._expression),
            field('operator', choice('==', '!=')),
            field('right', $._extglob_blob),
          )),
        ]
      }
    ),

    unary_expression: $ => choice(
      prec(PREC.PREFIX, seq(
        field('operator', tokenLiterals(1, '++', '--')),
        $._expression,
      )),
      prec(PREC.UNARY, seq(
        field('operator', tokenLiterals(1, '-', '+', '~')),
        $._expression,
      )),
      prec.right(PREC.UNARY, seq(
        field('operator', '!'),
        $._expression,
      )),
      prec.right(PREC.TEST, seq(
        field('operator', $.test_operator),
        $._expression,
      )),
    ),

    parenthesized_expression: $ => seq(
      '(',
      $._expression,
      ')',
    ),

    // SIMPLIFIED: Regex matching expression system (for use after =~ operator)
    // Structure: simple choice of literals and concatenation
    // Content: full complexity within expansions and other components
    // Let the scanner handle regex tokenization (including (.*)$ patterns)
    _regex_match_expression: $ => choice(
      $._regex_match_literal,
      alias($._regex_match_concatenation, $.concatenation),
    ),

    // Regex literals - let scanner handle regex patterns, grammar handles expansions
    _literal: $ => choice(
      $._primary_expression,
      $.concatenation,
      alias(prec(-2, repeat1($._special_character)), $.word),
    ),

    _primary_expression: $ => choice(
      $.qualified_expression,    // qualified globs should be first
      $._expansion_or_variable,
      $.glob_pattern,
      $._word_or_word_with_colon,
      alias($.test_operator, $.word),
      $.string,
      $.raw_string,
      $.translated_string,
      $.ansi_c_string,
      $.number,
      $.command_substitution,
      $.process_substitution,
      $.arithmetic_expansion,
      $.brace_expression,
    ),
    
    _limited_primary_expression: $ => choice(
      $.expansion,      // Try ${...} patterns first
      $.variable_ref,   // Fall back to $var patterns
      $.string,
      $.raw_string,
      $.translated_string,
      $.ansi_c_string,
      $.number,
      $.command_substitution,
      $.process_substitution,
      $.arithmetic_expansion,
    ),
    
    // Unified rule for all dollar-based patterns to eliminate competition  
    arithmetic_expansion: $ => prec(4, choice(
      seq(
        choice(
          alias(seq($._bare_dollar, '(('), "$(("),
          '(('
        ),
        commaSep1($._arithmetic_expression),
        '))'
      ),
      seq(
        alias(seq($._bare_dollar, '['), "$["),
        $._arithmetic_expression,
        ']'),
      )
    ),

    brace_expression: $ => seq(
      alias($._brace_expr_start, '{'),
      alias(token.immediate(/\d+/), $.number),
      token.immediate('..'),
      alias(token.immediate(/\d+/), $.number),
      token.immediate('}'),
    ),

    // A robust glob pattern must contain at least one glob metacharacter
    // This prevents tilde expansion like ~/foo from being parsed as glob
    _glob_innards: $ => token(choice(
      // Pattern starting with glob metacharacter
      seq(
        choice(
          /\*\*/,                                   // **
          /\*/,                                     // *
          /\?/,                                     // ?
          /\[[!^]?[^\]]*\]/,                        // [...]
          /<[0-9]+-[0-9]+>/,                        // <1-10>
          /\{[^}]*,[^}]*\}/,                        // {a,b}
          /\([^)|]+(\|[^)|]*)+\)/                   // (a|b|c)
        ),
        repeat(choice(
          /[^\s'"*?\[{(<=]/,                        // regular chars (note: ~ removed from exclusion)
          /\*\*/,                                   // **
          /\*/,                                     // *
          /\?/,                                     // ?
          /\[[!^]?[^\]]*\]/,                        // [...]
          /<[0-9]+-[0-9]+>/,                        // <1-10>
          /\{[^}]+,[^}]*\}/,                        // {a,b}
          /~/,                                      // ~ (allowed after initial char)
          /\([^)|]+(\|[^)|]*)+\)/                   // (a|b|c)
        ))
      ),
      // Pattern with regular chars containing at least one glob metacharacter
      seq(
        repeat1(/[^\s'"*?\[{(<=]/),                // regular chars (no ~ in exclusion)
        choice(
          /\*\*/,                                   // **
          /\*/,                                     // *
          /\?/,                                     // ?
          /\[[!^]?[^\]]*\]/,                        // [...]
          /<[0-9]+-[0-9]+>/,                        // <1-10>
          /\{[^}]*,[^}]*\}/,                        // {a,b}
          /\([^)|]+(\|[^)|]*)+\)/                   // (a|b|c)
        ),
        repeat(choice(
          /[^\s'"*?\[{(<=]/,                        // regular chars
          /\*\*/,                                   // **
          /\*/,                                     // *
          /\?/,                                     // ?
          /\[[!^]?[^\]]*\]/,                        // [...]
          /<[0-9]+-[0-9]+>/,                        // <1-10>
          /\{[^}]+,[^}]*\}/,                        // {a,b}
          /~/,                                      // ~ (allowed after initial char)
          /\([^)|]+(\|[^)|]*)+\)/                   // (a|b|c)
        ))
      )
    )),

    glob_pattern: $ => prec.dynamic(-1, prec.right(choice(
      // True glob patterns with wildcards
      seq(
        optional(field('flags', $.zsh_extended_glob_flags)),
        field('pattern', $._glob_innards),
        optional(choice(
          prec.right(field('qualifier', $.zsh_glob_qualifier)),
          prec.right(field('modifier', $.zsh_glob_modifier)),
          seq(
            prec.right(field('qualifier', $.zsh_glob_qualifier)),
            prec.right(field('modifier', $.zsh_glob_modifier)),
          ),
        )),
      ),
      // Words with qualifiers/modifiers (like /path/file(:h))
      prec(1, seq(
        optional(field('flags', $.zsh_extended_glob_flags)),
        field('pattern', $.word),
        choice(
          prec.right(field('qualifier', $.zsh_glob_qualifier)),
          prec.right(field('modifier', $.zsh_glob_modifier)),
          seq(
            prec.right(field('qualifier', $.zsh_glob_qualifier)),
            prec.right(field('modifier', $.zsh_glob_modifier)),
          ),
        ),
      )),
    ))),
    


    // Zsh extended glob flags: (#i) (#q) (#a2) etc.
    _arithmetic_expression: $ => prec(1, choice(
      $._arithmetic_literal,
      alias($._arithmetic_unary_expression, $.unary_expression),
      alias($._arithmetic_ternary_expression, $.ternary_expression),
      alias($._arithmetic_binary_expression, $.binary_expression),
      alias($._arithmetic_postfix_expression, $.postfix_expression),
      alias($._arithmetic_parenthesized_expression, $.parenthesized_expression),
      $.command_substitution,
    )),

    concatenation: $ => prec(-1, 
      seq(
      choice(
        $._primary_expression,
        alias($._special_character, $.word),
      ),
      repeat1(seq(
        choice($._concat, alias(/`\s*`/, '``')),
        choice(
          $._primary_expression,
          alias($._special_character, $.word),
          alias($._comment_word, $.word),
          // Use PEEK to check for $ without consuming it for concatenation
          $._peek_bare_dollar,
        ),
      )),
      // Use PEEK for trailing $ in concatenation
      optional(seq($._concat, $._peek_bare_dollar)),
    )),

    _special_character: _ => token(prec(-1,
      choice(token.immediate('{'), 
             token.immediate('}'), 
             token.immediate('['),
             token.immediate(']'),
             token.immediate(':')))),

    string: $ => seq(
      '"',
      repeat(seq(
        choice(
          seq(optional($._bare_dollar), $.string_content),
          $.expansion,
          $.variable_ref,
          $.command_substitution,
          $.arithmetic_expansion,
        ),
        optional($._concat),
      )),
      optional($._raw_dollar),
      '"',
    ),

    string_content: _ => token(prec(-1, /([^"`$\\\r\n]|\\(.|\r?\n))+/)),

    raw_string: _ => seq("'", /[^']*/, "'"),

    expansion_substring: $ => $._expansion_max_length,
    
